better file structure on template parts wrapper added to prevent horizontal scroll additional helper to call ACF theme options

--- a/src/scss/global/_project_global.scss
+++ b/src/scss/global/_project_global.scss
@@ -16,6 +16,9 @@ body {
 .global-block-body-scroll-cst {
 	overflow: hidden;
 }
+#main-cst-theme-wrapp-cst {
+	overflow-x: hidden;
+}
 .container-cst {
 	max-width: 1220px;
 	width: 100%;
